# Holmes-Legal-And-Ethical-Inspector

./: README.md  pyproject.toml
.kilocode/rules/: specify-rules.md
.kilocode/workflows/: speckit.plan.md
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/extensions/agent-context/: agent-context-config.yml
.specify/integrations/: kilocode.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
config/: auth.yml.example  example.yml  local.yml
examples/: bed_occupancy_agent.py
specs/001-fraud-detection-swarm/: data-model.md  functional-requirements-sequence.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-fraud-detection-swarm/checklists/: requirements.md
specs/001-fraud-detection-swarm/contracts/: agent-contract.md  investigation-api.md  (+1 more)
src/holmes_swarm/: __init__.py  config.py  logging_setup.py
tests/: conftest.py
tests/fixtures/: attendance.json  cartel_cardiologia.json  clinical.json  contracts.json  pqrs.json  secop_snapshot_cartel.json
tests/integration/: _cartel_helpers.py  conftest.py  test_alert_payload.py  test_blocked_host.py  test_cartel_cardiologia_case.py  test_detection_improvements.py  test_investigation_flow.py  test_minimal_info_detection.py  test_plugin_agent.py  test_source_outage.py  test_submit_returns_fast.py  test_swarm_end_to_end.py
tests/unit/: test_allowlist_client.py  test_consensus.py  test_dedup.py  test_llm_adapter.py  test_llm_driven_agents.py  test_origin_gating.py  test_signal_schema.py  test_staleness.py
(+42 files in other folders)
